Version 0.4.3

- Added reply button to /read/

Version 0.4.2

- Added addressbook to WebUI
- Can no delete sent messages from webUI

Version 0.4.12

- Fixed /read/ layout error
- Added new emoticons - :frown:, :disapproval:, and :wink:

Version 0.4.11

- Fixed JSON Error in bytemailgui.py

Version 0.4.1

- Fixed new client bug
- GUI Fixes

Version 0.4.0 

- Added WebUI which starts by default
- Added KeyError checking now

Version 0.3.25 Beta

- Added sent time to sent.db database entries

Version 0.3.24 Beta

- Added emoticons! Current ones are: :flag: :smile: :radioactive: :pirate:

Version 0.3.23 Beta

- When a new message is received instead of displaying the address it will display the name you assigned to that address, assuming the address is in your addressbook (only applies to relay nodes)
- Added sent_purge command, deletes all entries in the sent database

Version 0.3.22 Beta

- Fixed an error with the check command when un-timestamed messages are in the database

Version 0.3.21 Beta

- Fixed multiple entries into the addressbook.db
- Added updating to addressbook (simple insert a new address with the same name to update it)
- Added remove_address command in order to delete from the addressbook

Version 0.3.2 Beta

- Added Timestamp to messages
- Added sent command for checking sent messages
- Added sent_delete command for deleting messages in the sent.db file

Version 0.3.1 Beta

- Fixed RSA signature bug
- Added version command

Version 0.3.00 Beta

- Added RSA Signatures to messages & message deleations

Version 0.2.89 Beta

- Blank entries can no longer be inserted into the addressbook.db
- Added new command "addresses" shows all addresses in your address book

Version 0.2.88 Beta

- Fixed Connection reset by peer error

Version 0.2.87 Beta

- Added purge command to delete all messages sent to the node

Version 0.2.86 Beta

- When enter is pressed the previous command is no longer executed
- Fixed invalid "To: " field bug

Version 0.2.85 Beta
