@@ -1,6 +1,7 @@
 Version 0.4.3
 
 - Added reply button to /read/
+- Fixed Addressbook error
 
 Version 0.4.2
 
